[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/HUD.tres" type="TileSet" id=1]
[ext_resource path="res://Sprites/HUD/colored_transparent_packed633.png" type="Texture" id=2]
[ext_resource path="res://Sprites/HUD/colored_transparent_packed999.png" type="Texture" id=3]
[ext_resource path="res://Sprites/HUD/colored_transparent_packed861.png" type="Texture" id=4]
[ext_resource path="res://Sprites/HUD/colored_transparent_packed556.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Canvas.gd" type="Script" id=6]
[ext_resource path="res://Sprites/HUD/colored_transparent_packed911.png" type="Texture" id=7]
[ext_resource path="res://Sprites/HUD/colored_transparent_packed905.png" type="Texture" id=8]
[ext_resource path="res://Sprites/HUD/colored_transparent_packed955.png" type="Texture" id=9]
[ext_resource path="res://Sprites/HUD/colored_transparent_packed900.png" type="Texture" id=10]
[ext_resource path="res://Sprites/HUD/colored_transparent_packed908.png" type="Texture" id=11]
[ext_resource path="res://Sprites/HUD/colored_transparent_packed959.png" type="Texture" id=12]
[ext_resource path="res://Sprites/HUD/colored_transparent_packed949.png" type="Texture" id=13]
[ext_resource path="res://Assets/MyFonts.tres" type="DynamicFont" id=14]
[ext_resource path="res://Sprites/HUD/colored_transparent_packed809.png" type="Texture" id=15]
[ext_resource path="res://Sprites/HUD/colored_transparent_packed948.png" type="Texture" id=16]
[ext_resource path="res://Sprites/HUD/colored_transparent_packed957.png" type="Texture" id=17]
[ext_resource path="res://Assets/kenpixel_mini.ttf" type="DynamicFontData" id=18]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 18 )

[node name="Canvas" type="CanvasLayer"]
script = ExtResource( 6 )

[node name="head" type="Node2D" parent="."]

[node name="TileMap2" type="TileMap" parent="head"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, -1610612735, 0, 1, -1610612735, 0, 2, -1610612735, 0, 3, -1610612735, 0, 4, -1610612735, 0, 5, -1610612735, 0, 6, -1610612735, 0, 7, -1610612735, 0, 8, -1610612735, 0, 9, -1610612735, 0, 10, -1610612735, 0, 11, -1610612735, 0, 12, -1610612735, 0, 13, -1610612735, 0, 14, -1610612735, 0, 15, -1610612735, 0, 16, -1610612735, 0, 17, -1610612735, 0, 18, -1610612735, 0, 19, -1610612735, 0 )

[node name="Soul" type="Sprite" parent="head"]
position = Vector2( 8, 8 )
texture = ExtResource( 5 )

[node name="X" type="Sprite" parent="head"]
position = Vector2( 24, 8 )
texture = ExtResource( 3 )

[node name="big" type="Sprite" parent="head"]
position = Vector2( 40, 8 )
texture = ExtResource( 4 )

[node name="small" type="Sprite" parent="head"]
position = Vector2( 56, 8 )
texture = ExtResource( 4 )

[node name="Time" type="Label" parent="head"]
margin_left = 276.0
margin_top = -3.0
margin_right = 320.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 14 )
text = "00:00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="emit" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="emit"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 65536, -1610612736, 0, 65537, -1610612736, 0, 65538, -1610612736, 0, 65539, -1610612736, 0, 65540, -1610612736, 0, 65541, -1610612736, 0, 65542, -1610612736, 0, 65543, -1610612736, 0, 65544, -1610612736, 0, 65545, -1610612736, 0, 65546, -1610612736, 0, 65547, -1610612736, 0, 65548, -1610612736, 0, 65549, -1610612736, 0, 65550, -1610612736, 0, 65551, -1610612736, 0, 65552, -1610612736, 0, 65553, -1610612736, 0, 65554, -1610612736, 0, 65555, -1610612736, 0 )

[node name="Emitter" type="Sprite" parent="emit"]
position = Vector2( 160, 30 )
texture = ExtResource( 2 )

[node name="Position2D" type="Position2D" parent="emit/Emitter"]
position = Vector2( 0, 8 )

[node name="fail" type="Node2D" parent="."]
visible = false

[node name="bg" type="TileMap" parent="fail"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 65536, 1, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 65553, 1, 0, 65554, 1, 0, 65555, 1, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 1, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, 131087, 1, 0, 131088, 1, 0, 131089, 1, 0, 131090, 1, 0, 131091, 1, 0, 196608, 1, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 1, 0, 196621, 1, 0, 196622, 1, 0, 196623, 1, 0, 196624, 1, 0, 196625, 1, 0, 196626, 1, 0, 196627, 1, 0, 262144, 1, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 262160, 1, 0, 262161, 1, 0, 262162, 1, 0, 262163, 1, 0, 327680, 1, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 1, 0, 327696, 1, 0, 327697, 1, 0, 327698, 1, 0, 327699, 1, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 1, 0, 393232, 1, 0, 393233, 1, 0, 393234, 1, 0, 393235, 1, 0, 458752, 1, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 1, 0, 458768, 1, 0, 458769, 1, 0, 458770, 1, 0, 458771, 1, 0, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 1, 0, 524305, 1, 0, 524306, 1, 0, 524307, 1, 0, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 1, 0, 589841, 1, 0, 589842, 1, 0, 589843, 1, 0, 655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 1, 0, 655377, 1, 0, 655378, 1, 0, 655379, 1, 0, 720896, 1, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 1, 0, 720914, 1, 0, 720915, 1, 0, 786432, 1, 0, 786433, 1, 0, 786434, 1, 0, 786435, 1, 0, 786436, 1, 0, 786437, 1, 0, 786438, 1, 0, 786439, 1, 0, 786440, 1, 0, 786441, 1, 0, 786442, 1, 0, 786443, 1, 0, 786444, 1, 0, 786445, 1, 0, 786446, 1, 0, 786447, 1, 0, 786448, 1, 0, 786449, 1, 0, 786450, 1, 0, 786451, 1, 0 )

[node name="colored_transparent_packed959" type="Sprite" parent="fail"]
modulate = Color( 0.870588, 0.0156863, 0.0156863, 1 )
position = Vector2( 104, 104 )
texture = ExtResource( 12 )

[node name="colored_transparent_packed949" type="Sprite" parent="fail"]
modulate = Color( 0.870588, 0.0156863, 0.0156863, 1 )
position = Vector2( 120, 104 )
texture = ExtResource( 13 )

[node name="colored_transparent_packed955" type="Sprite" parent="fail"]
modulate = Color( 0.870588, 0.0156863, 0.0156863, 1 )
position = Vector2( 136, 104 )
texture = ExtResource( 9 )

[node name="colored_transparent_packed905" type="Sprite" parent="fail"]
modulate = Color( 0.870588, 0.0156863, 0.0156863, 1 )
position = Vector2( 168, 104 )
texture = ExtResource( 8 )

[node name="colored_transparent_packed900" type="Sprite" parent="fail"]
modulate = Color( 0.870588, 0.0156863, 0.0156863, 1 )
position = Vector2( 184, 104 )
texture = ExtResource( 10 )

[node name="colored_transparent_packed908" type="Sprite" parent="fail"]
modulate = Color( 0.870588, 0.0156863, 0.0156863, 1 )
position = Vector2( 200, 104 )
texture = ExtResource( 11 )

[node name="colored_transparent_packed911" type="Sprite" parent="fail"]
modulate = Color( 0.870588, 0.0156863, 0.0156863, 1 )
position = Vector2( 216, 104 )
texture = ExtResource( 7 )

[node name="Button" type="Button" parent="fail"]
margin_left = 120.0
margin_top = 168.0
margin_right = 200.0
margin_bottom = 194.0
custom_fonts/font = ExtResource( 14 )
text = "restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="win" type="Node2D" parent="."]
visible = false

[node name="bg2" type="TileMap" parent="win"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 65536, 1, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 65553, 1, 0, 65554, 1, 0, 65555, 1, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 1, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, 131087, 1, 0, 131088, 1, 0, 131089, 1, 0, 131090, 1, 0, 131091, 1, 0, 196608, 1, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 1, 0, 196621, 1, 0, 196622, 1, 0, 196623, 1, 0, 196624, 1, 0, 196625, 1, 0, 196626, 1, 0, 196627, 1, 0, 262144, 1, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 262160, 1, 0, 262161, 1, 0, 262162, 1, 0, 262163, 1, 0, 327680, 1, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 1, 0, 327696, 1, 0, 327697, 1, 0, 327698, 1, 0, 327699, 1, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 1, 0, 393232, 1, 0, 393233, 1, 0, 393234, 1, 0, 393235, 1, 0, 458752, 1, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 1, 0, 458768, 1, 0, 458769, 1, 0, 458770, 1, 0, 458771, 1, 0, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 1, 0, 524305, 1, 0, 524306, 1, 0, 524307, 1, 0, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 1, 0, 589841, 1, 0, 589842, 1, 0, 589843, 1, 0, 655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 1, 0, 655377, 1, 0, 655378, 1, 0, 655379, 1, 0, 720896, 1, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 1, 0, 720914, 1, 0, 720915, 1, 0, 786432, 1, 0, 786433, 1, 0, 786434, 1, 0, 786435, 1, 0, 786436, 1, 0, 786437, 1, 0, 786438, 1, 0, 786439, 1, 0, 786440, 1, 0, 786441, 1, 0, 786442, 1, 0, 786443, 1, 0, 786444, 1, 0, 786445, 1, 0, 786446, 1, 0, 786447, 1, 0, 786448, 1, 0, 786449, 1, 0, 786450, 1, 0, 786451, 1, 0 )

[node name="colored_transparent_packed959" type="Sprite" parent="win"]
self_modulate = Color( 0.984314, 0.972549, 0.298039, 1 )
position = Vector2( 96, 83 )
texture = ExtResource( 12 )

[node name="colored_transparent_packed949" type="Sprite" parent="win"]
self_modulate = Color( 0.984314, 0.972549, 0.298039, 1 )
position = Vector2( 112, 83 )
texture = ExtResource( 13 )

[node name="colored_transparent_packed955" type="Sprite" parent="win"]
self_modulate = Color( 0.984314, 0.972549, 0.298039, 1 )
position = Vector2( 128, 83 )
texture = ExtResource( 9 )

[node name="colored_transparent_packed957" type="Sprite" parent="win"]
self_modulate = Color( 0.984314, 0.972549, 0.298039, 1 )
position = Vector2( 192, 83 )
texture = ExtResource( 17 )

[node name="colored_transparent_packed908" type="Sprite" parent="win"]
self_modulate = Color( 0.984314, 0.972549, 0.298039, 1 )
position = Vector2( 208, 83 )
texture = ExtResource( 11 )

[node name="colored_transparent_packed948" type="Sprite" parent="win"]
self_modulate = Color( 0.984314, 0.972549, 0.298039, 1 )
position = Vector2( 224, 83 )
texture = ExtResource( 16 )

[node name="colored_transparent_packed809" type="Sprite" parent="win"]
self_modulate = Color( 0.984314, 0.972549, 0.298039, 1 )
position = Vector2( 136, 123 )
texture = ExtResource( 15 )

[node name="Label" type="Label" parent="win"]
margin_left = 152.0
margin_top = 112.0
margin_right = 192.0
margin_bottom = 132.0
custom_fonts/font = ExtResource( 14 )
text = "9999"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="win"]
margin_left = 20.0
margin_top = 150.0
margin_right = 300.0
margin_bottom = 195.0
custom_fonts/font = SubResource( 1 )
text = "Credit: Sprites\"1-Bit Pack\" Created/distributed by Kenney (www.kenney.nl)
Code, bgm and design by nickykendy"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" type="Node2D" parent="."]
visible = false

[node name="bg2" type="TileMap" parent="menu"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 65536, 1, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 65553, 1, 0, 65554, 1, 0, 65555, 1, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 1, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, 131087, 1, 0, 131088, 1, 0, 131089, 1, 0, 131090, 1, 0, 131091, 1, 0, 196608, 1, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 1, 0, 196621, 1, 0, 196622, 1, 0, 196623, 1, 0, 196624, 1, 0, 196625, 1, 0, 196626, 1, 0, 196627, 1, 0, 262144, 1, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 262160, 1, 0, 262161, 1, 0, 262162, 1, 0, 262163, 1, 0, 327680, 1, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 1, 0, 327696, 1, 0, 327697, 1, 0, 327698, 1, 0, 327699, 1, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 1, 0, 393232, 1, 0, 393233, 1, 0, 393234, 1, 0, 393235, 1, 0, 458752, 1, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 1, 0, 458768, 1, 0, 458769, 1, 0, 458770, 1, 0, 458771, 1, 0, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 1, 0, 524305, 1, 0, 524306, 1, 0, 524307, 1, 0, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 1, 0, 589841, 1, 0, 589842, 1, 0, 589843, 1, 0, 655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 1, 0, 655377, 1, 0, 655378, 1, 0, 655379, 1, 0, 720896, 1, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 1, 0, 720914, 1, 0, 720915, 1, 0, 786432, 1, 0, 786433, 1, 0, 786434, 1, 0, 786435, 1, 0, 786436, 1, 0, 786437, 1, 0, 786438, 1, 0, 786439, 1, 0, 786440, 1, 0, 786441, 1, 0, 786442, 1, 0, 786443, 1, 0, 786444, 1, 0, 786445, 1, 0, 786446, 1, 0, 786447, 1, 0, 786448, 1, 0, 786449, 1, 0, 786450, 1, 0, 786451, 1, 0 )

[node name="exit" type="Button" parent="menu"]
margin_left = 112.0
margin_top = 72.0
margin_right = 202.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 14 )
text = "exit game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="restart" type="Button" parent="menu"]
margin_left = 112.0
margin_top = 112.0
margin_right = 202.0
margin_bottom = 138.0
custom_fonts/font = ExtResource( 14 )
text = "restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="fail/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="menu/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="menu/restart" to="." method="_on_restart_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
